feat: added update user endpoint
user update with id and name in url and updated docs
